# llama-custom-api

./: .env.example  .gitignore  .mcp.json  README.md  pyproject.toml
common/: config.py  models.py
common/inference/: tokenizer.py
common/utils/: logging.py  text_sanitize.py
docs/_dev_guidelines/: overview.md  pattern-a-implementation.md  pattern-b-implementation.md  pattern-c-implementation.md  patterns-separation.md
docs/architecture/: overview.md  pattern-a-architecture.md  pattern-b-architecture.md  pattern-c-architecture.md
docs/deployment/: ec2-a.md  ec2-b.md  ec2-c.md  model-setup-llama-cpp.md
docs/development/: serena-mcp-setup.md
prompts/: system_prompt.md
scripts/: dev.sh  run_server.sh  serena.sh
src/a_ignore_eos/app/: engine.py  main.py
src/a_ignore_eos/app/routers/: chat.py
src/a_ignore_eos/tests/: conftest.py  test_engine.py
src/b_logit_bias/app/: engine.py  main.py
src/b_logit_bias/app/routers/: chat.py
src/b_logit_bias/tests/: conftest.py  test_engine.py
src/c_logits_processor/app/: engine.py  main.py  processors.py
src/c_logits_processor/tests/: conftest.py  test_minlen_processor.py
